Compilacion y cambio de paquetes terminado.