@@ -1,16 +1,17 @@
 package com.angelsoft.sat.cfdi.v4;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Maps;
 import com.angelsoft.sat.common.CfdCommon;
 
+import java.util.HashMap;
 import java.util.Map;
 
 public abstract class CFDv4 extends CfdCommon {
 
-    protected final ImmutableMap<String, String> PREFIXES = ImmutableMap.of("http://www.w3.org/2001/XMLSchema-instance", "xsi", "http://www.sat.gob.mx/cfd/4", "cfdi");
+    protected static final Map<String, String> PREFIXES =
+            Map.of("http://www.w3.org/2001/XMLSchema-instance", "xsi",
+                   "http://www.sat.gob.mx/cfd/4", "cfdi");
 
-    protected final Map<String, String> localPrefixes = Maps.newHashMap(PREFIXES);
+    protected final Map<String, String> localPrefixes = new HashMap<>(PREFIXES);
 
     @Override
     public Map<String, String> getLocalPrefixes() {
